@@ -2,6 +2,7 @@
   compress.c - code for handling deflation
   Copyright (C) 1999  Bryan Burns
   Copyright (C) 2004  Free Software Foundation, Inc.
+  Copyright (C) 2007  Dalibor Topic
   
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
